--- a/FrontendMentor/fylo-dark-theme-landing-page-master/index.html
+++ b/FrontendMentor/fylo-dark-theme-landing-page-master/index.html
@@ -1,106 +1,211 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+
   <title>Frontend Mentor | Fylo landing page with dark theme and features grid</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <!-- <link rel="stylesheet" href="https://kit.fontawesome.com/cc458f1c9d.css" crossorigin="anonymous"> -->
+  <link rel="stylesheet" href="./assets/style.css">  
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
+
 <body>
-  Features
-  Team
-  Sign In
+  <header class="blue-dark">
+    <nav class="navbar navbar-dark">
+      <div class="container mt-md-3">
+        <a class="navbar-brand nav-fill col-3" href="#">
+          <img src="./images/logo.svg" class="img-fluid" alt="Bootstrap">
+        </a>
+        <div class="navbar-nav flex-row justify-content-between col-5 col-md-3 col-lg-2">
+          <a class="nav-link" href="#">Features</a>
+          <a class="nav-link" href="#">Team</a>
+          <a class="nav-link" href="#">Sign In</a>
+        </div>
+      </div>
+    </nav>
+    <section id="intro" class="py-4 my-md-5">
+      <div class="row justify-content-center">
+        <div class="col-10 col-lg-8 d-flex justify-content-center">
+          <img src="./images/illustration-intro.png" class="img-fluid" alt="">
+        </div>
+      </div>
 
-  All your files in one secure location, accessible anywhere.
+      <div class="row justify-content-center mt-2">
+        <h1 class="col-10 col-lg-6 text-center">All your files in one secure location, accessible anywhere.</h1>
+      </div>
 
-  Fylo stores all your most important files in one secure location. Access them wherever 
-  you need, share and collaborate with friends family, and co-workers.
+      <div class="row justify-content-center mt-2">
+        <p class="col-10 col-lg-6 text-center">Fylo stores all your most important files in one secure location. Access them
+          wherever
+          you need, share and collaborate with friends family, and co-workers.</p>
+      </div>
 
-  Get Started
+      <div class="row justify-content-center">
+        <a class="col-4 col-lg-2 col-md-3 px-5 py-2 btn px-5 btn-st bg-blue rounded-pill" href="">Get Started</a>
+      </div>
+    </section>
 
-  Access your files, anywhere
+  </header>
+  <main>
+    <section id="Features" class="my-3 py-3 my-md-5">
+      <div class="row justify-content-center gap-md-5">
+        <div class="col-10 col-md-4 text-center mt-5">
+          <img src="./images/icon-access-anywhere.svg" class="img-fluid acc-img" alt="">
+          <h2 class="mt-3">Access your files, anywhere</h2>
+          <p>The ability to use a smartphone, tablet, or computer to access your account means your
+            files follow you everywhere.</p>
+        </div>
+        <div class="col-10 col-md-4 text-center mt-5">
+          <img src="./images/icon-security.svg" class="img-fluid acc-img" alt="">
+          <h2 class="mt-3">Security you can trust</h2>
+          <p>2-factor authentication and user-controlled encryption are just a couple of the security
+            features we allow to help secure your files.</p>
+        </div>
+        <div class="col-10 col-md-4 text-center mt-5">
+          <img src="./images/icon-collaboration.svg" class="img-fluid acc-img" alt="">
+          <h2 class="mt-3">Real-time collaboration</h2>
+          <p>Securely share files and folders with friends, family and colleagues for live collaboration.
+            No email attachments required.</p>
+        </div>
+        <div class="col-10 col-md-4 text-center mt-5">
+          <img src="./images/icon-any-file.svg" class="img-fluid acc-img" alt="">
+          <h2 class="mt-3">Store any type of file</h2>
+          <p>Whether you're sharing holidays photos or work documents, Fylo has you covered allowing for all
+            file types to be securely stored and shared.</p>
+        </div>
+      </div>
+    </section>
+    <section id="productive" class="my-3 py-3 my-md-5">
+      <div class="row justify-content-center gap-md-5">
+        <div class="col-10 col-md-4 mt-5 mt-md-0">
+          <img src="./images/illustration-stay-productive.png" class="img-fluid" alt="">
+        </div>
+        <div class="col-10 col-md-4 py-5">
+          <h3>Stay productive, wherever you are</h3>
+          <p> Never let location be an issue when accessing your files. Fylo has you covered for all of your file
+            storage needs.</p>
+          <p>Securely share files and folders with friends, family and colleagues for live collaboration. No email
+            attachments required.</p>
+          <a id="show-more" href="#">See how Fylo works <img src="./images/icon-arrow.svg" alt=""></a>
+        </div>
+      </div>
+    </section>
+    <section id="testimonials" class="my-md-5">
+      <div class="row justify-content-center">
+        <div class="col-8 col-md-10 bg-qu">
+          <div class="row justify-content-center justify-content-md-around">
+            <div class="col-12 col-md-3-5 blue-dark-t p-4 mt-4">
+              <p>Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has
+                become a well-oiled collaboration machine.</p>
+              <div class="col-10 d-flex flex-row align-items-center">
+                <img width="40" height="40" class="profile-image" src="./images/profile-1.jpg" alt="">
+                <div class="col-8 ms-3 info">
+                  <h6>Satish Patel</h6>
+                  <p class="mb-0">Founder & CEO, Huddle</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-12 col-md-3-5 blue-dark-t p-4 mt-4">
+              <p>Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has
+                become a well-oiled collaboration machine.</p>
+              <div class="col-10 d-flex flex-row align-items-center">
+                <img width="40" height="40" class="profile-image" src="./images/profile-2.jpg" alt="">
+                <div class="col-8 ms-3 info">
+                  <h6>Bruce McKenzie</h6>
+                  <p class="mb-0">Founder & CEO, Huddle</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-12 col-md-3-5 blue-dark-t p-4 mt-4">
+              <p>Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has
+                become a well-oiled collaboration machine.</p>
+              <div class="col-10 d-flex flex-row align-items-center">
+                <img width="40" height="40" class="profile-image" src="./images/profile-3.jpg" alt="">
+                <div class="col-8 ms-3 info">
+                  <h6>Iva Boyd</h6>
+                  <p class="mb-0">Founder & CEO, Huddle</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row justify-content-center">
+        <div class="row justify-content-center">
+          <div class="col-10 col-md-8 col-lg-6 blue-dark sign-up p-5 text-center">
+            <h3>Get early access today</h3>
+            <p class="my-4">It only takes a minute to sign up and our free starter tier is extremely generous. If you have any
+              questions, our support team would be happy to help you.</p>
+            <div class="d-flex flex-column">
+              <input type="text" placeholder="email@example.com" class="form-control rounded-5 p-3">
+              <a href="#" class="btn bg-blue rounded-5 text-decoration-none mt-3 py-3"> Get Started For Free</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+  </main>
 
-  The ability to use a smartphone, tablet, or computer to access your account means your 
-  files follow you everywhere.
-
-  Security you can trust
-
-  2-factor authentication and user-controlled encryption are just a couple of the security 
-  features we allow to help secure your files.
-
-  Real-time collaboration
-
-  Securely share files and folders with friends, family and colleagues for live collaboration. 
-  No email attachments required.
-
-  Store any type of file
-
-  Whether you're sharing holidays photos or work documents, Fylo has you covered allowing for all 
-  file types to be securely stored and shared.
-
-  Stay productive, wherever you are
-
-  Never let location be an issue when accessing your files. Fylo has you covered for all of your file 
-  storage needs.
-
-  Securely share files and folders with friends, family and colleagues for live collaboration. No email 
-  attachments required.
-
-  See how Fylo works
-
-  Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has 
-  become a well-oiled collaboration machine.
-
-  Satish Patel
-  Founder & CEO, Huddle
-
-  Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has 
-  become a well-oiled collaboration machine.
-
-  Bruce McKenzie
-  Founder & CEO, Huddle
-
-  Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has 
-  become a well-oiled collaboration machine.
-
-  Iva Boyd
-  Founder & CEO, Huddle
-
-  Get early access today
-
-  It only takes a minute to sign up and our free starter tier is extremely generous. If you have any 
-  questions, our support team would be happy to help you.
-
-  Get Started For Free
-
-  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et 
-  dolore magna aliqua
-
-  +1-543-123-4567
-  example@fylo.com
-
-  About Us
-  Jobs
-  Press
-  Blog
-
-  Contact Us
-  Terms
-  Privacy
-
-  <footer>
-    <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
-    </p>
+  <footer class="blue-dark-f pb-5">
+    <div class="row footer-container justify-content-center ">
+      <div class="col-10 col-md-4 mt-5">
+        <img src="./images/logo.svg" class="img-fluid" alt="">
+        <div class="d-flex flex-row footer-info mt-5">
+          <img src="./images/icon-location.svg" alt="">
+          <p class="col-10 ms-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+            dolore magna aliqua</p>
+        </div>
+      </div>
+      <div class="col-10 col-md-3 mt-5">
+        <div class="d-flex flex-row  footer-info mt-3">
+          <img src="./images/icon-phone.svg" class="img-fluid" alt="">
+          <p class="col-10 ms-4">+1-543-123-4567</p>
+        </div>
+        <div class="d-flex flex-row footer-info mt-3">
+          <img src="./images/icon-email.svg" alt="">
+          <p class="col-10 ms-4">example@fylo.com</p>
+        </div>
+      </div>
+      <div class="col-10 col-md-2  d-flex flex-column mt-5 links align-content-between">
+        <a href="#">About Us</a>
+        <a href="#">Jobs</a>
+        <a href="#">Press</a>
+        <a href="#">Blog</a>
+      </div>
+      <div class="col-10  col-md-2 d-flex flex-column mt-5 links align-content-between">
+        <a href="#">Contact Us</a>
+        <a href="#">Terms</a>
+        <a href="#">Privacy</a>
+      </div>
+    </div>
+    <div class="d-flex justify-content-center flex-row icons mt-5">
+      <i class="fa-brands fa-facebook "></i>
+      <i class="fa-brands fa-twitter "></i>
+      <i class="fa-brands fa-instagram "></i>
+    </div>
   </footer>
+
+
+  
+  
+  
+  
+
+  
+  
+  
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+    crossorigin="anonymous"></script>
+  <script src="https://kit.fontawesome.com/cc458f1c9d.js" crossorigin="anonymous"></script>
+
 </body>
+
 </html>
